--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="style.css" />
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script type="text/javascript" src="jquery.countdown.min.js"></script>
-	<script type="text/javascript" src="site.js"></script>
+	<script type="text/javascript" src="site.min.js"></script>
 </head>
 <body>
 <section id="settings">
