Add export to TSV button

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="style.css" />
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script type="text/javascript" src="jquery.countdown.min.js"></script>
-	<script type="text/javascript" src="site.min.js"></script>
+	<script type="text/javascript" src="site.js"></script>
 </head>
 <body>
 <section id="settings">
@@ -43,8 +43,10 @@
 	<div id="actions">
 		<a href="" class="btn-start">Get back to work</a>
 		<br>
-		<a href="" id="reset">Clear activity log</a>
+		<a href="" class="btn-footer" id="reset">Clear activity log</a>
 		<span>Are you sure? <a href="" class="confirm">Yes</a> <a href="" class="cancel">No</a></span>
+
+		<a href="" class="btn-footer" id="copyTSV">Copy as TSV</a>
 	</div>
 	<a href="" class="settings set-cycle">Settings</a>
 </section>
