--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>HTML5 Time Tracker - by Juani</title>
 	<link rel="stylesheet" href="style.css" />
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script type="text/javascript" src="jquery-1.10.2.min.js"></script>
 	<script type="text/javascript" src="jquery.countdown.min.js"></script>
 	<script type="text/javascript" src="site.js"></script>
 </head>
