⭐️ feature: show total duration

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 </section>
 
 <section id="list">
+	<div id="total">
+		<h2>Total</h2>
+		<span class="value"></span>
+	</div>
 	<ul id="done">
 		
 	</ul>
